--- a/src/LSTM/DataPipeline.ipynb
+++ b/src/LSTM/DataPipeline.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -46,7 +46,7 @@
     "\n",
     "    # DATA PREPROCESSING: ---------------------------------------------------------\n",
     "    \"TRAIN_VAL_TEST\":   [0.8, 0.19, 0.01], # [train, val, test splits]\n",
-    "    \"MAX_FILES\":        None, # None: all files\n",
+    "    \"MAX_FILES\":        2000, # None: all files\n",
     "    \"SCALERS\":          {'feature_scaler': 'MaxAbsScaler()', 'target_scaler': 'MinMaxScaler(feature_range=(0, 1))'},\n",
     "    \"MIN_SEQ_LENGTH\":   60, # minimum sequence length in seconds\n",
     "\n",
@@ -652,7 +652,7 @@
    "outputs": [],
    "source": [
     "# START TRAINING -----------------------------------------------------------------\n",
-    "CHECKPOINT = TRAINER.train_model()"
+    "if MODE == 'train_mode': CHECKPOINT = TRAINER.train_model()"
    ]
   },
   {
@@ -1003,7 +1003,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0rc1"
+   "version": "3.11.0"
   }
  },
  "nbformat": 4,
