--- a/src/LSTM/DataPipeline.ipynb
+++ b/src/LSTM/DataPipeline.ipynb
@@ -686,7 +686,7 @@
     "# CHECK SAVED OBJECT SIZE -----------------------------------------------------------------\n",
     "print(f\"Model saved to:\\t {model_destination_path}\\n{'-'*60}\\nSize: {os.path.getsize(model_destination_path) / 1024**2:.2f} MB\\n{'-'*60}\")\n",
     "if os.path.getsize(model_destination_path) > 100 * 1024**2: \n",
-    "    print(\"--> Warning: saved model size exceeds 100MB!\")\n",
+    "    print(\"--> Warning: saved model size exceeds 100MB! Creating a zip file instead ...\")\n",
     "    try:\n",
     "        import io, zipfile\n",
     "        buffer = io.BytesIO(); torch.save(CHECKPOINT, buffer); buffer.seek(0)\n",
