--- a/src/LSTM/DataPipeline.ipynb
+++ b/src/LSTM/DataPipeline.ipynb
@@ -638,32 +638,8 @@
     "y_pred = scaled_outputs[sample_int]\n",
     "y_true = scaled_targets[sample_int]\n",
     "\n",
-    "###############################################\n",
-    "# PLOT PREDICTION -----------------------------------------------------------------\n",
-    "if PLOT_ACTIVE:\n",
-    "     plt.figure(figsize=(18,4)); plt.xlabel('Time in s'); plt.ylabel('SOC in %'); plt.title('Battery State of Charge: Prediction vs. Actual Data') \n",
-    "     plt.plot(y_true, label='Actual Data') # actual plot\n",
-    "     plt.plot(np.arange(0, len(y_true), 1), y_pred, label='Predicted Data') # predicted plot\n",
-    "     plt.legend()\n",
-    "     plt.text(0.01, 0.02, f\"RMSE: {root_mean_squared_error(y_true, y_pred):.4f}\\nStd Dev: {np.std(y_true - y_pred):.4f}\",\\\n",
-    "          transform=plt.gca().transAxes, fontsize=12, bbox=dict(facecolor='white', alpha=0.5))\n",
-    "\n",
-    "     plt.figure(figsize=(18,4)); plt.xlabel('Time in s'); plt.ylabel('SOC in %')\n",
-    "     plt.plot(savgol_filter(y_true.flatten(), window_length=60, polyorder=3), label='Actual Data (Smoothed)') # actual plot\n",
-    "     plt.plot(np.arange(0, len(y_true), 1), savgol_filter(y_pred.flatten(), window_length=60, polyorder=3), label='Predicted Data (Smoothed)') # predicted plot\n",
-    "     plt.legend();"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "'''\n",
-    "TODOs: \n",
-    "- check if keeping the hidden state between batches is necessary\n",
-    "'''"
+    "# -------------------------------------\n",
+    "plot_prediction(y_true, y_pred, PLOT_ACTIVE)"
    ]
   }
  ],
