--- a/src/LSTM/DataPipeline.ipynb
+++ b/src/LSTM/DataPipeline.ipynb
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -177,7 +177,7 @@
     "from src.utils.data_utils import *\n",
     "from src.utils.preprocess_utils import *\n",
     "from src.utils.eval_utils import *\n",
-    "from src.utils.Trainer import *\n",
+    "from src.utils.Trainers import *\n",
     "from src.LSTM.lstm_models import *\n",
     "\n",
     "# SETUP ENVIRONMENT ---------------------------------------------------------------------\n",
