--- a/src/PINN/DataPipeline_PINN.ipynb
+++ b/src/PINN/DataPipeline_PINN.ipynb
@@ -229,9 +229,7 @@
     "# FILE SOURCES ---------------------------------------------------------------\n",
     "input_folder = Path(DATA_PATH, INPUT_LOCATION) # Trip parquet files\n",
     "pth_folder = Path(ROOT, OUTPUT_LOCATION)\n",
-    "\n",
-    "files, trip_lengths, indices_by_length, sorted_trip_lengths, all_signals \\\n",
-    "    = prepare_data(input_folder, pth_folder, MAX_FILES, MIN_SEQ_LENGTH, ROOT)"
+    "files, trip_lengths, indices_by_length, sorted_trip_lengths, all_signals = prepare_data(input_folder, pth_folder, MAX_FILES, MIN_SEQ_LENGTH, ROOT)"
    ]
   },
   {
@@ -1003,7 +1001,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0rc1"
+   "version": "3.11.0"
   }
  },
  "nbformat": 4,
