--- a/src/LSTM/DataPipeline.ipynb
+++ b/src/LSTM/DataPipeline.ipynb
@@ -1446,7 +1446,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0rc1"
+   "version": "undefined.undefined.undefined"
   }
  },
  "nbformat": 4,
