--- a/src/PINN/processing/add_new_columns.ipynb
+++ b/src/PINN/processing/add_new_columns.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/sieglew/MA-eR-PINN\n"
+      "C:\\Users\\SIEGLEW\\OneDrive - Daimler Truck\\MA\\Code\\MA-eR-PINN\n"
      ]
     }
    ],
@@ -17,9 +17,9 @@
     "from pathlib import Path, WindowsPath, PosixPath\n",
     "# SETTINGS ------------------------------------------------------------------------\n",
     "CONFIG = {\n",
-    "    \"ROOT\":             Path('../..').resolve(),\n",
+    "    \"ROOT\":             Path('../../..').resolve(),\n",
     "    \"INPUT_LOCATION\":   Path(\"TripSequences\", \"trips_processed_final\"), \n",
-    "    \"OUTPUT_LOCATION\":   Path(\"TripSequences\", \"trips_processed_pinn_2\"),\n",
+    "    \"OUTPUT_LOCATION\":  Path(\"TripSequences\", \"trips_processed_pinn_2\"),\n",
     "}\n",
     "for key in CONFIG: globals()[key] = CONFIG[key];\n",
     "print(ROOT)"
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -36,8 +36,8 @@
      "text": [
       "------------------------------------------------------------\n",
       "Directories:\n",
-      "  /home/sieglew/MA-eR-PINN:\t\t\tproject, ref, test, data, src, .git, archive\n",
-      "  /home/sieglew/MA-Data:\t\t\t__pycache__, trips_processed_resampled, final, y_true, processed, TripSequences, trips_processed_pickles, final_2, trips_processed_final\n",
+      "  C:\\Users\\SIEGLEW\\OneDrive - Daimler Truck\\MA\\Code\\MA-eR-PINN:\t\t\t.git, archive, data, project, ref, src, test\n",
+      "  C:\\Users\\SIEGLEW\\OneDrive - Daimler Truck\\MA\\Code\\MA-Data:\t\t\tnew_folder, new_folder_2, OLD, processed, TripSequences\n",
       "------------------------------------------------------------\n",
       "Running in notebook mode\n"
      ]
@@ -59,8 +59,8 @@
     "# ----------------------------------------------------------------------------------------\n",
     "from src.utils.data_utils import *\n",
     "from src.utils.Trainers import *\n",
-    "from src.physics_model.VehModel import CreateVehicle\n",
-    "from src.physics_model.Mot_Pwr import estimate_mot_pwr\n",
+    "from src.PINN.physics_model.VehModel import CreateVehicle\n",
+    "from src.PINN.physics_model.Mot_Pwr import estimate_mot_pwr\n",
     "\n",
     "# NOTEBOOK / SCRIPT SETTINGS -------------------------------------------------------------\n",
     "# ----------------------------------------------------------------------------------------\n",
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -19278,7 +19278,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
