--- a/src/LSTM/PTRAIN_OPT.ipynb
+++ b/src/LSTM/PTRAIN_OPT.ipynb
@@ -11,7 +11,7 @@
     "'''------------------------------------------------------------------\n",
     "MA-eR-PINN: eRange Prediction using Physics-Informed Neural Networks\n",
     "---------------------------------------------------------------------\n",
-    "Version: V1.9       Modified: 05.01.2025        William Siegle\n",
+    "Version: V2.0      Modified: 12.01.2025        William Siegle\n",
     "---------------------------------------------------------------------\n",
     "PTRAIN - Standard Pipeline Framework for Training the PINN\n",
     "+ OPTUNA - Hyperparameter Optimization using Optuna\n",
@@ -33,49 +33,85 @@
     "    \"ROOT\":             Path('../..').resolve(),\n",
     "    \"INPUT_LOCATION\":   Path(\"TripSequences\", \"trips_processed_pinn_2\"), \n",
     "    \"OUTPUT_LOCATION\":  Path(\"src\", \"models\", \"pth\"),\n",
-    "    \"SEED\"  :           42,\n",
+    "    \"SEED\"  :           25,\n",
     "    \"PLOT_ACTIVE\":      True,\n",
     "\n",
     "    # DATA PREPROCESSING: ---------------------------------------------------------\n",
-    "    \"TRAIN_VAL_TEST\":   [0.8, 0.15, 0.05], # [train, val, test splits]\n",
-    "    \"MAX_FILES\":        300, # None: all files\n",
-    "    \"SCALERS\":          {'feature_scaler': 'MaxAbsScaler()',\n",
-    "                        'target_scaler': 'MinMaxScaler(feature_range=(0, 1))',\n",
-    "                        'prior_scaler': 'MinMaxScaler(feature_range=(0, 1))'},\n",
-    "    \"MIN_SEQ_LENGTH\":   3600, # minimum sequence length in s to be included in DataSets\n",
+    "    \"TRAIN_VAL_TEST\":   [0.8, 0.19, 0.01], # [train, val, test splits]\n",
+    "    \"MAX_FILES\":        None, # None: all files\n",
+    "    \"MIN_SEQ_LENGTH\":   600, # minimum sequence length in s to be included in DataSets\n",
+    "    \"SCALERS\":          {'feature_scaler': 'MaxAbsScaler()','target_scaler': 'MinMaxScaler(feature_range=(0, 1))','prior_scaler': 'MinMaxScaler(feature_range=(0, 1))'},\n",
     "\n",
     "    # FEATURES: -------------------------------------------------------------------\n",
     "    \"FEATURES\":         ['accelpdlposn_cval','actdrvtrnpwrprc_cval','actualdcvoltage_pti1','actualspeed_pti1','actualtorque_pti1',\n",
-    "                        #'airtempinsd_cval_hvac','airtempinsd_rq','airtempoutsd_cval_cpc','altitude_cval_ippc','brc_stat_brc1','brktempra_cval',\n",
-    "                        #'bs_brk_cval','currpwr_contendrnbrkresist_cval','elcomp_pwrcons_cval','epto_pwr_cval','hv_bat_dc_momvolt_cval_bms1',\n",
-    "                        #'hv_batavcelltemp_cval_bms1','hv_batcurr_cval_bms1','hv_batisores_cval_e2e','hv_batmaxchrgpwrlim_cval_1',\n",
-    "                        #'hv_batmaxdischrgpwrlim_cval_1','hv_curr_cval_dcl1','hv_dclink_volt_cval_dcl1','hv_ptc_cabin1_pwr_cval','hv_pwr_cval_dcl1',\n",
-    "                        #'lv_convpwr_cval_dcl1','maxrecuppwrprc_cval','maxtracpwrpct_cval','motortemperature_pti1','powerstagetemperature_pti1',\n",
-    "                        'rmsmotorcurrent_pti1','roadgrad_cval_pt','selgr_rq_pt','start_soc','txoiltemp_cval_tcm','vehspd_cval_cpc','vehweight_cval_pt'],\n",
-    "                                     \n",
+    "                        'airtempinsd_cval_hvac','airtempinsd_rq','airtempoutsd_cval_cpc','altitude_cval_ippc','brc_stat_brc1','brktempra_cval',\n",
+    "                        'bs_brk_cval','currpwr_contendrnbrkresist_cval','elcomp_pwrcons_cval','epto_pwr_cval','hv_bat_dc_momvolt_cval_bms1',\n",
+    "                        'hv_batavcelltemp_cval_bms1','hv_batcurr_cval_bms1','hv_batisores_cval_e2e','hv_batmaxchrgpwrlim_cval_1',\n",
+    "                        'hv_batmaxdischrgpwrlim_cval_1','hv_curr_cval_dcl1','hv_dclink_volt_cval_dcl1','hv_ptc_cabin1_pwr_cval','hv_pwr_cval_dcl1',\n",
+    "                        'lv_convpwr_cval_dcl1','maxrecuppwrprc_cval','maxtracpwrpct_cval','motortemperature_pti1','powerstagetemperature_pti1',\n",
+    "                        'rmsmotorcurrent_pti1','roadgrad_cval_pt','selgr_rq_pt','start_soc','txoiltemp_cval_tcm','vehspd_cval_cpc','vehweight_cval_pt'],                 \n",
     "    \"TARGETS\":          ['hv_bat_soc_cval_bms1'],\n",
     "    \"PRIORS\":           ['emot_soc_pred'],  \n",
     "\n",
     "    # MODEL: -----------------------------------------------------------------------\n",
-    "    \"HIDDEN_SIZE\":      10,    # features in the hidden state h\n",
-    "    \"NUM_LAYERS\":       1,      # recurrent layers for stacked LSTMs. Default: 1\n",
-    "    \"DROPOUT\":          0.5,\n",
+    "    \"HIDDEN_SIZE\":      200,    # features in the hidden state h\n",
+    "    \"NUM_LAYERS\":       2,      # recurrent layers for stacked LSTMs. Default: 1\n",
+    "    \"DROPOUT\":          0.35,   # usually: [0.2 - 0.5]\n",
     "    \n",
     "    # TRAINING & OPTIMIZER: --------------------------------------------------------\n",
-    "    \"NUM_EPOCHS\":       2,\n",
-    "    \"BATCH_SIZE\":       2,   # [2, 4, 8, 16, 32, 64, 128, 256]\n",
+    "    \"NUM_EPOCHS\":       5,\n",
+    "    \"BATCH_SIZE\":       32,   # [2, 4, 8, 16, 32, 64, 128, 256]\n",
     "    \"LEARNING_RATE\":    1e-2,   # 0.001 lr\n",
-    "    \"OPTIMIZER\":        \"torch.optim.AdamW(model.parameters(), lr = LEARNING_RATE, weight_decay = 1e-3)\",      \n",
-    "                        # weight_decay = 1e-4     # weight decay coefficient (default: 1e-2)\n",
-    "                        # betas = (0.9, 0.95),    # coefficients used for computing running averages of gradient and its square (default: (0.9, 0.999))\n",
-    "                        # eps = 1e-8,             # term added to the denominator to improve numerical stability (default: 1e-8)\n",
-    "    \"LRSCHEDULER\":      \"torch.optim.lr_scheduler.ReduceLROnPlateau(optimizer, mode='min', patience = 3, factor = 0.5, min_lr = 1e-7)\",\n",
+    "    \"WEIGHT_DECAY\":     1e-2,   # weight decay coefficient (default: 1e-2)\n",
+    "    \"MOMENTUM_SGD\":     0.0,   # (default: 0.0)\n",
+    "    \"OPTIMIZER\":        'adamw',     # ('adam', 'sgd', 'adamw')\n",
+    "    \"LRSCHEDULER\":      \"torch.optim.lr_scheduler.LambdaLR(optimizer, lr_lambda=lambda epoch: 1.0)\",  # constant LR for 1.0 as multiplicative factor\n",
+    "                        # torch.optim.lr_scheduler.ReduceLROnPlateau(optimizer, mode='min', patience = 3, factor = 0.5, min_lr = 1e-7)\n",
     "\n",
     "    # LOSS FUNCTION: ---------------------------------------------------------------\n",
     "    \"CRITERION\":        \"nn.SmoothL1Loss()\", # ['nn.MSELoss()', 'nn.L1Loss()', 'nn.SmoothL1Loss()', 'nn.HuberLoss()', 'MASE()']\n",
     "    \"LOSS_FN\":          \"F.mse_loss(output, target)\", # ['F.mse_loss(output, target)', 'F.l1_loss(output, target)', 'F.smooth_l1_loss(output, target)', 'F.huber_loss(output, target)', 'F.mase_loss(output, target)']\n",
     "    \"P_LOSS_FACTOR\":    0.1, # Physics loss factor\n",
     "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "dc61569d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# OPTUNA: SEARCH SPACE ---------------------------------------------------\n",
+    "global search_space, search_space_NewData\n",
+    "search_space = {\n",
+    "    # MODEL: -----------------------------------------------------------------------\n",
+    "    'HIDDEN_SIZE': ('int', 50, 400, 50),\n",
+    "    'NUM_LAYERS': ('int', 1, 5),\n",
+    "    'DROPOUT': ('float', 0.05, 0.5, 0.05),\n",
+    "    #'WEIGHT_INIT': ('categorical', ('xavier', 'he', 'normal')),\n",
+    "    #'BATCH_NORM_ON': ('categorical', (True, False))\n",
+    "\n",
+    "\n",
+    "    # TRAINING & OPTIMIZER: --------------------------------------------------------\n",
+    "    'OPTIMIZER': ('categorical', ('adam', 'sgd', 'adamw')),\n",
+    "    'LEARNING_RATE': ('categorical', (1e-5, 5e-5, 1e-4, 3e-4, 5e-4, 8e-4, 1e-3, 3e-3, 5e-3, 8e-3, 1e-2, 2e-2, 5e-2, 1e-1, 2e-1)),\n",
+    "    'WEIGHT_DECAY': ('categorical', (0.0, 1e-6, 1e-5, 1e-4, 1e-3, 1e-2)),\n",
+    "    'MOMENTUM_SGD': ('float', 0.0, 0.9, 0.1),\n",
+    "\n",
+    "\n",
+    "    'P_LOSS_FACTOR': ('float', 0.0, 1.0, 0.05)\n",
+    "}\n",
+    "\n",
+    "search_space_NewData = {\n",
+    "    # DATA PREPROCESSING: ---------------------------------------------------------\n",
+    "    \"MIN_SEQ_LENGTH\": ('int', 300, 3600, 300),\n",
+    "    'BATCH_SIZE': ('categorical', (4, 8, 16, 32, 64, 128)),\n",
+    "\n",
+    "\n",
+    "}\n",
+    "\n",
+    "N_TRIALS = 5"
    ]
   },
   {
@@ -452,27 +488,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "dc61569d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# OPTUNA: SEARCH SPACE ---------------------------------------------------\n",
-    "global search_space\n",
-    "search_space = {\n",
-    "    'HIDDEN_SIZE': ('int', 10, 100),\n",
-    "    'NUM_LAYERS': ('int', 1, 3),\n",
-    "    'DROPOUT': ('float', 0.1, 0.5),\n",
-    "    'LEARNING_RATE': ('float', 1e-4, 1e-2),\n",
-    "    'BATCH_SIZE': ('categorical', 16, 512),\n",
-    "    'P_LOSS_FACTOR': ('float', 0.0, 1.0)\n",
-    "}\n",
-    "\n",
-    "N_TRIALS = 3"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 12,
    "id": "ef9c4426",
    "metadata": {},
@@ -490,12 +505,21 @@
     "\n",
     "    # Update CONFIG with suggested hyperparameters\n",
     "    for param in search_space.keys(): CONFIG[param] = locals()[param.lower()]\n",
-    "    \n",
     "    # -----------------------------------------------------------------------------------\n",
+    "\n",
     "    # TRAINING_CODE: -----------------------------------------------------------------\n",
     "    # INSTANTIATE MODEL --------------------\n",
     "    model = LSTM1_packed_old_version(len(INPUT_COLUMNS), HIDDEN_SIZE, NUM_LAYERS, DROPOUT).to(DEVICE)\n",
-    "    optimizer = eval(OPTIMIZER); scheduler = eval(LRSCHEDULER); criterion = eval(CRITERION)\n",
+    "    optimizer = eval(OPTIMIZER)\n",
+    "    \n",
+    "    if eval(OPTIMIZER)=='adam':\n",
+    "        optimizer = torch.optim.Adam(model.parameters(), lr=LEARNING_RATE, weight_decay=WEIGHT_DECAY)\n",
+    "    elif eval(OPTIMIZER)=='adamw':\n",
+    "        optimizer = torch.optim.AdamW(model.parameters(), lr = LEARNING_RATE, weight_decay = WEIGHT_DECAY)\n",
+    "    elif eval(OPTIMIZER)=='sgd':\n",
+    "        optimizer = torch.optim.SGD(model.parameters(), lr=LEARNING_RATE, momentum=MOMENTUM_SGD, weight_decay=WEIGHT_DECAY)\n",
+    "    \n",
+    "    scheduler = eval(LRSCHEDULER); criterion = eval(CRITERION)\n",
     "\n",
     "    # LOSS FUNCTION ----------------------------------------------------------------   \n",
     "    def loss_fn_PINN_3(output, target, prior):\n",
