add reverse sigmoid scheduler

--- a/src/LSTM/PTRAIN_EVAL.ipynb
+++ b/src/LSTM/PTRAIN_EVAL.ipynb
@@ -70,7 +70,7 @@
     "    \"LRSCHEDULER\":      \"torch.optim.lr_scheduler.LambdaLR(optimizer, lr_lambda=lr_lambda)\",  # constant LR for 1.0 as multiplicative factor\n",
     "\n",
     "    # LOSS FUNCTION: ---------------------------------------------------------------\n",
-    "    \"LPSCHEDULER\":      \"ParameterScheduler(initial_value=0.0, schedule_type='constant')\",\n",
+    "    \"LPSCHEDULER\":      \"ParameterScheduler(initial_value=0.0, schedule_type='reverse_sigmoid', total_epochs=10)\",\n",
     "    #       'constant': [], 'time_based': ['decay_rate'], 'step_based': ['drop_rate', 'epochs_drop'], 'exponential': ['decay_rate'], 'linear': ['absolute_reduction'], \n",
     "    #       'cosine_annealing': ['total_epochs'], 'cyclic': ['base_lr', 'max_lr', 'step_size']\n",
     "\n",
