--- a/test/train_hot_cold/PTRAIN_EVAL_BASE.ipynb
+++ b/test/train_hot_cold/PTRAIN_EVAL_BASE.ipynb
@@ -61,8 +61,8 @@
     "    \"DROPOUT\":          0.05,  # usually: [0.2 - 0.5]\n",
     "    \n",
     "    # TRAINING & OPTIMIZER: --------------------------------------------------------\n",
-    "    \"NUM_EPOCHS\":       500,         # max epochs\n",
-    "    \"BATCH_SIZE\":       256,         # [2, 4, 8, 16, 32, 64, 128, 256]\n",
+    "    \"NUM_EPOCHS\":       2000,         # max epochs\n",
+    "    \"BATCH_SIZE\":       128,         # [2, 4, 8, 16, 32, 64, 128, 256]\n",
     "    \"LEARNING_RATE\":    0.0003,     # 0.001 lr\n",
     "    \"OPTIMIZER\":        'adam',     # ('adam', 'sgd', 'adamw')\n",
     "    \"WEIGHT_DECAY\":     1e-7,       # weight decay coefficient (default: 1e-2)\n",
@@ -203,7 +203,7 @@
       "15  NUM_LAYERS        4\n",
       "16  DROPOUT           0.05\n",
       "17  NUM_EPOCHS        500\n",
-      "18  BATCH_SIZE        512\n",
+      "18  BATCH_SIZE        256\n",
       "19  LEARNING_RATE     0.0003\n",
       "20  OPTIMIZER         adam\n",
       "21  WEIGHT_DECAY      1e-07\n",
@@ -215,7 +215,7 @@
       "\n",
       "Torch version:  2.5.1+cu124\n",
       "Using: -->  CUDA:0\n",
-      "Timestamp: 250127_081947\n",
+      "Timestamp: 250130_194112\n",
       "------------------------------------------------------------\n",
       "Total Files:\t6626\n",
       "Filtered Files:\t6626\n",
@@ -418,25 +418,38 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "9fd8a553",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5234\n",
+      "1392\n"
+     ]
+    }
+   ],
    "source": [
     "# DATA SET SPLITTING AND SORTING ----------------------------------------------------------------\n",
     "#train_subset, val_subset, test_subset = random_split(files, TRAIN_VAL_TEST)\n",
     "\n",
     "# OR: \n",
     "\n",
-    "# TRAIN IN GERMANY, TEST/VAL IN SPAIN\n",
-    "train_indices = file_length_df.index[(file_length_df['Lat'] > 45) & (file_length_df['Lat'] < 60)].tolist()\n",
-    "val_test_indices = file_length_df.index[(file_length_df['Lat'] < 45) ].tolist()\n",
-    "random.shuffle(val_test_indices)\n",
+    "# TRAIN/TEST IN GERMANY, VAL IN SPAIN/SWEDEN\n",
+    "train_test_indices = file_length_df.index[(file_length_df['Lat'] > 45) & (file_length_df['Lat'] < 60)].tolist()\n",
+    "val_indices = file_length_df.index[(file_length_df['Lat'] <= 45) | (file_length_df['Lat'] >= 60)].tolist()\n",
     "\n",
-    "train_subset = Subset(files, train_indices)\n",
+    "random.shuffle(train_test_indices)\n",
+    "random.shuffle(val_indices)\n",
     "\n",
-    "val_subset = Subset(files, val_test_indices[:len(val_test_indices)//2])\n",
-    "test_subset = Subset(files, val_test_indices[len(val_test_indices)//2:])\n",
-    "\n"
+    "val_subset = Subset(files, val_indices)                     # All of ESP/SWE Trips for Val\n",
+    "cutoff = int(len(train_test_indices) * 0.85)\n",
+    "train_subset = Subset(files, train_test_indices[:cutoff])   # 85% of GER Trips for Train\n",
+    "test_subset = Subset(files, train_test_indices[cutoff:])    # 15% of GER Trips for Test\n",
+    "\n",
+    "#print(len(train_subset)/len(file_length_df))                # 67% of all\n",
+    "#print(len(val_subset)/len(file_length_df))                  # 21% of all\n",
+    "#print(len(test_subset)/len(file_length_df))                 # 12% of all\n"
    ]
   },
   {
