--- a/src/LSTM/PTRAIN_EVAL.ipynb
+++ b/src/LSTM/PTRAIN_EVAL.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "id": "9cfaf8cc",
    "metadata": {},
    "outputs": [],
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "id": "55581895",
    "metadata": {},
    "outputs": [],
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "id": "222d1780",
    "metadata": {},
    "outputs": [],
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "id": "7924eab4",
    "metadata": {},
    "outputs": [
@@ -194,7 +194,7 @@
       "\n",
       "Torch version:  2.5.1+cu124\n",
       "Using: -->  CUDA:0\n",
-      "Timestamp: 250130_224024\n",
+      "Timestamp: 250131_100747\n",
       "------------------------------------------------------------\n",
       "Total Files:\t6626\n",
       "Filtered Files:\t6626\n",
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "id": "6bb0b2cd",
    "metadata": {},
    "outputs": [
@@ -266,7 +266,13 @@
       "Input Signals:\t6\n",
       "Target Signals:\t1\n",
       "Physical Prior Signals:\t1\n",
-      "------------------------------------------------------------\n",
+      "------------------------------------------------------------\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       " --> Warning: Removed the last 31 samples to ensure a balanced batch size\n",
       "fitting Scalers: MinMaxScaler, MinMaxScaler, MinMaxScaler\n",
       "\t50% of the fitting done...\n",
@@ -333,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "id": "15ef486f",
    "metadata": {},
    "outputs": [],
@@ -476,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "id": "ef9c4426",
    "metadata": {},
    "outputs": [
@@ -588,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 9,
    "id": "f81daa6c",
    "metadata": {},
    "outputs": [
@@ -628,7 +634,7 @@
        ")"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -661,7 +667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 10,
    "id": "5c8b4ee5",
    "metadata": {},
    "outputs": [
@@ -683,7 +689,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 11,
+   "id": "56ae584c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.utils.data.dataset.Subset"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(test_subset)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "id": "2c5df231",
    "metadata": {},
    "outputs": [],
@@ -711,7 +738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 13,
    "id": "be98d248",
    "metadata": {},
    "outputs": [
@@ -741,7 +768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 14,
    "id": "97f09213",
    "metadata": {},
    "outputs": [
@@ -958,7 +985,19 @@
    "execution_count": 57,
    "id": "23767f13",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
    "source": [
     "# LOAD:\n",
     "import pandas as pd\n",
